--- a/classic-guild-bank/src/index.html
+++ b/classic-guild-bank/src/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta charset="utf-8">
-  <title>Classic Guild Bank</title>
+  <title>Guild Bank</title>
   <base href="/">
     
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
